# GodotLLMInteraction

./: .gitignore  .pre-commit-config.yaml  e2e_test_plan.md  git_usage.md  godot-versions.txt  heroPrompt.md  hero_rpg.md  icon.svg.import  install-godot.sh  lessons_learned.md  mcp_plan.md  new_tools.md  plan.md  project.godot  pyproject.toml  schema_diff_v4_4_0.yaml  schema_diff_v4_4_1.yaml  setup.sh
.devin/rules/: gli_mcp.md  godot.md  typer-config-cli.md
_manual_test/: scene.tscn  test_add_animation.md  test_add_sprite_tile.md
asset/: Put here your  tilemap_packed.png.import
docs/: IMPLEMENTATION.md  adding-a-version.md  creating-animated-sprites-2d.md  gdscript-linting.md  tscn-editing.md  validating-tscn.md
docs/features/: llm_tscn_cli_tool.md
examples/tiny_dungeon_demo/: ACKNOWLEDGMENTS.md
scenes/: door.tscn  manual_door.tscn
scenes/InteractableAreas/: Player_prova.gd.uid
scenes/Movement/: follow_movement.gd.uid  mouse_follow_movement.gd.uid  movement.gd.uid  random_movement.gd.uid
scripts/: register_gdquest_kb.py
src/godotllminteraction/: __init__.py  cli.py  image.py  paths.py
tests/: conftest.py
tests/e2e/: _helpers.py  add_version_cli_test.py  conftest.py  create_scene_test.py  generate_all_cli_test.py  generate_builtin_classes_cli_test.py  global_enums_stability_test.py  real_scenes_edit_validate_4_4_0_test.py  real_scenes_edit_validate_4_4_1_test.py  real_scenes_edit_validate_4_5_0_test.py  real_scenes_edit_validate_4_6_0_test.py  real_scenes_edit_validate_4_6_2_test.py  real_scenes_edit_validate_4_7_0_test.py  real_scenes_godot_check_4_4_1_test.py  real_scenes_godot_check_4_5_0_test.py  real_scenes_godot_check_4_6_0_test.py  real_scenes_godot_check_4_6_2_test.py  real_scenes_godot_check_4_7_0_test.py  real_scenes_godot_check_test.py  real_scenes_parse_4_4_1_test.py  real_scenes_parse_4_5_0_test.py  real_scenes_parse_4_6_0_test.py  real_scenes_parse_4_6_2_test.py  real_scenes_parse_4_7_0_test.py  real_scenes_parse_test.py  spec_enum_names_stability_test.py  spec_sections_stability_test.py  tscn_apply_cli_test.py  tscn_granular_cli_test.py
tests/integration/: conftest.py  enum_import_test.py  schema_diff_integration_test.py  specs_roundtrip_test.py  tscn_godot_check_test.py
tests/unit/: add_input_action_test.py  add_version_test.py  conftest.py  generate_all_cli_test.py  generate_builtin_classes_test.py  generate_classes_test.py  generate_global_enums_test.py  generate_signals_test.py  mcp_spec_tool_test.py  paths_test.py  schema_diff_test.py  sync_enums_fuzzy_test.py  sync_enums_test.py  tscn_godot_check_util_test.py  tscn_operations_test.py  tscn_tree_test.py  (+5 more)
(+205 files in other folders)
