[project]
name = "godotllminteraction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Oscar Pindaro", email = "oscar.pindaro@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "pillow>=12.3.0",
    "pre-commit>=4.6.0",
    "pydantic>=2.13.4",
    "pyyaml>=6.0.3",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2.0"]
kb = ["model2vec>=0.4.0", "numpy>=1.24.0"]

[project.scripts]
gli = "godotllminteraction.cli:cli"

[build-system]
requires = ["uv_build>=0.11.13,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
